--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+::-webkit-scrollbar {
+  width: 0.4rem;
+}
 
+::-webkit-scrollbar-track {
+  background-color:darkblue;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:black;
+  border-radius: 10px;
+
+}
+::selection {
+  background-color: lightblue;
+  color:white;
+}
 .header {
   background: #eba707;
 }
